--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-use": "^17.5.0",
-    "tailwind-merge": "^2.3.0",
-    "zustand": "^4.5.4"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
