--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "react": "^18",
     "react-audio-player": "^0.17.0",
@@ -19,6 +20,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
